route-prefix-weight.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-js
spec:
  hosts:
  - "*"
  gateways:
  - hello-js-gateway
  http:
  - match:
    - uri:
        prefix: /api
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-api
        subset: v1
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-js
        subset: v1
      weight: 90
    - destination:
        host: hello-js
        subset: v2
      weight: 10
