route-to-1-subset.yaml
# All request will be routed to hello-js app v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-js
spec:
  hosts:
  - "*"
  gateways:
  - hello-js-gateway
  http:
  - route:
    - destination:
        host: hello-js
        subset: v1
