weight-based-routing.yaml
# As it's name, weight based routing is very useful when we want to implement Canary deployment

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-js
spec:
  hosts:
  - "*"
  gateways:
  - hello-js-gateway
  http:
  - route:
    - destination:
        host: hello-js
        subset: v1
      weight: 90
    - destination:
        host: hello-js
        subset: v2
      weight: 10
